--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ img {
 
 @media screen and (max-width: 768px) {
     .container {
-        width: 720px;
+        width: 100%;
         margin: 0 auto;
         padding: 0 20px;
     }
@@ -138,7 +138,7 @@ img {
 
 @media screen and (max-width: 480px) {
     .container {
-        width: 460px;
+        max-width: 100%;
         margin: 0 auto;
         padding: 0 20px;
     }
