--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,13 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+@media screen and (min-width: 769px) {
+    .container {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+}
+
 
 @media screen and (max-width: 768px) {
     .container {
